@@ -18,15 +18,30 @@ public class VocabularyServiceImpl implements VocabularyService {
     @Override
     public List<VocabularyResponse> getVocabularyByLessionId(Long lessionId) {
         return vocabularyRepository.findByLessionId(lessionId).stream()
-                .map(v -> new VocabularyResponse(
-                        v.getId(),
-                        v.getWord(),
-                        v.getMeaning(),
-                        v.getExample(),
-                        v.getAudioUrl(),
-                        v.getImageUrl()
-                ))
-                .collect(Collectors.toList());
+                .map(v -> VocabularyResponse.builder()
+                        .id(v.getId())
+                        .word(v.getWord())
+                        .imageUrl(v.getImageUrl())
+                        .audioUrl(v.getAudioUrl())
+                        .meaning(v.getMeaning())
+                        .example(v.getExample())
+                        .build())
+                .toList();
+    }
+    @Override
+    public List<VocabularyResponse> getVocabularyReviewByLessonId(Long lessionId) {
+        return vocabularyRepository.findByLessionId(lessionId).stream()
+                .map(vocab -> VocabularyResponse.builder()
+                        .id(vocab.getId())
+                        .word(vocab.getWord())
+                        .phonetic(vocab.getPhonetic())
+                        .imageUrl(vocab.getImageUrl())
+                        .audioUrl(vocab.getAudioUrl())
+                        .meaning(vocab.getMeaning())
+                        .example(vocab.getExample())
+                        .exampleMeaning(vocab.getExampleMeaning())
+                        .build())
+                .toList();
     }
 }
 
